--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <button onclick="location.href='/swagger-ui/index.html'" style="position: fixed; top: 10px; left: 10px; z-index: 1000;">
+  Swagger UI
+</button>
+
     <div class="container">
         <h1>Load & Booking Management System</h1>
 
@@ -53,7 +57,7 @@
                         <th>Comment</th>
                         <th>Status</th>
                         <th>Date Posted</th>
-                        <th>Actions</th>
+                        <!-- <th>Actions</th> -->
                     </tr>
                 </thead>
                 <tbody id="loads-body"></tbody>
@@ -87,7 +91,7 @@
                         <th>Comment</th>
                         <th>Status</th>
                         <th>Requested At</th>
-                        <th>Actions</th>
+                        <!-- <th>Actions</th> -->
                     </tr>
                 </thead>
                 <tbody id="bookings-body"></tbody>
